# CSA_HW

./: CMakeLists.txt  README.md  container.cpp  main.cpp  plane.h  rnd.h  ship.cpp  ship.h  train.h  transport.cpp  transport.h
HW1/: README.md  container.h  plane.cpp  plane.h  train.cpp
HW1/tests/: script
HW1/tests/output/: test1_output1.txt  test1_output2.txt  test2_output1.txt  test4_output1.txt  test5_output1.txt  test5_output2.txt  test6_output1.txt  test6_output2.txt
HW2/: .gitignore  CMakeLists.txt  README.md  container.cpp  container.h  main.cpp  plane.cpp  plane.h  rnd.h  ship.cpp  ship.h  train.cpp  train.h  transport.cpp  transport.h
HW2/tests/: script
HW2/tests/input/: test5_input.txt
HW2/tests/output/: test2_output2.txt  test4_output1.txt  test4_output2.txt  test5_output1.txt  test5_output2.txt  test6_output1.txt  test6_output2.txt
HW3/: README.md
HW3/src/: container.py  extender.py  main.py  newRandom.py  plane.py  ship.py  train.py
HW3/tests/: script
HW3/tests/input/: test4_input.txt
HW3/tests/output/: test1_output1.txt  test1_output2.txt  test2_output1.txt  test2_output2.txt  test3_output1.txt  test3_output2.txt  test4_output1.txt  test4_output2.txt  test5_output1.txt  test5_output2.txt  test6_output1.txt  test6_output2.txt  test7_output1.txt  test7_output2.txt  test8_output1.txt  test8_output2.txt  (+2 more)
HW5/: Bee.cpp  Bee.h  CMakeLists.txt  README.md  main.cpp
tests/input/: test1_input.txt  test2_input.txt  test3_input.txt
tests/output/: test3_output1.txt  test3_output2.txt  test4_output2.txt  test6_output1.txt  test6_output2.txt
